<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.ashokaquiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@mipmap/background_ashoka" />

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/Q1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/A1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/HintText"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/Q2"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/A2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/A2a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A2a" />

                <RadioButton
                    android:id="@+id/A2b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A2b" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/Q3"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/A3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <CheckBox
                    android:id="@+id/A3a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A3a" />

                <CheckBox
                    android:id="@+id/A3b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A3b" />

                <CheckBox
                    android:id="@+id/A3c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A3c" />

            </LinearLayout>

            <TextView
                android:id="@+id/Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/Q4"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/A4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/A4a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A4a" />

                <RadioButton
                    android:id="@+id/A4b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A4b" />

                <RadioButton
                    android:id="@+id/A4c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/A4c" />

            </RadioGroup>

            <TextView
                android:id="@+id/Q5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/Q5"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/A5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/HintText"
                android:inputType="number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:onClick="displayScore"
                    android:text="@string/calculate_score_button_text" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
